--- a/rootfs/etc/php7/php-fpm.d/php-fpm.conf
+++ b/rootfs/etc/php7/php-fpm.d/php-fpm.conf
@@ -14,14 +14,17 @@ daemonize = no
 [www]
 user = ash
 group = ash
-listen = [::]:9000
+listen = /socket/phpfpm.sock
+listen.owner = ash
+listen.group = ash
+listen.mode = 0660
 access.log = /proc/self/fd/2
 pm = dynamic
-pm.max_children = 32
-pm.start_servers = 4
-pm.min_spare_servers = 2
-pm.max_spare_servers = 6
-pm.max_requests = 400
+pm.max_children = 8
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 5
+pm.max_requests = 16384
 pm.status_path = /status
 ping.path = /ping
 ping.response = pong
