Adds more production-ready default INI settings

--- a/rootfs/etc/php7/conf.d/99_general.ini
+++ b/rootfs/etc/php7/conf.d/99_general.ini
@@ -5,8 +5,9 @@
 cgi.fix_pathinfo = 0
 date.timezone = "Etc/UTC"
 default_charset = "UTF-8"
-display_errors = On
+display_errors = Off
 error_reporting = E_ALL & ~E_NOTICE | E_DEPRECATED
+expose_php = Off
 ignore_repeated_errors = On
 log_errors = On
 max_execution_time = 600
@@ -16,5 +17,6 @@ output_buffering = 4096
 post_max_size = 32M
 realpath_cache_size = 4M
 realpath_cache_ttl = 300
+soap.wsdl_cache=1
 upload_max_filesize = 32M
 zlib.output_compression = On
